# implanet

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/disk_views/: README.md
docs/figures/: README.md
examples/: _flyby.py  animations.py  comparison_figures.py  dawn_mars.py  daynight_reference.py  demo.py  disk_views.py  earth_dayside.py  figures.py  flatmap_figures.py  galileo_galilean_moons.py  galileo_venus.py  messenger_m1_flyby.py  messenger_venus.py  new_horizons_pluto.py  scientific_figures.py  texture_gallery.py  transparent_disks.py  try_implanet.ipynb  variant_comparison.py  voyager1_io.py  voyager1_jupiter.py  voyager1_saturn.py  voyager2_neptune.py  voyager2_saturn.py  voyager2_uranus.py
figures/: README.md
figures/disk_views/: README.md
implanet/: __init__.py  cli.py  ephemeris.py  fetch.py  figure.py  overlays.py  projection.py  render.py
implanet/assets/: __init__.py  _cache.py  _registry.py  _synthetic.py
implanet/assets/data/: kernels.json  manifest.json
maps/: manifest.json
scripts/: build_attribution.py  fetch_maps.py  sync_registry.py
tests/: _cli_tool.py  test_assets.py  test_ephemeris.py  test_render.py
